// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SegmentedControl /> ControlledSegmentedControl story renders snapshot 1`] = `
<div
  aria-label="Segmented Control"
  class="MuiToggleButtonGroup-root css-5qbclc-MuiToggleButtonGroup-root"
  role="group"
>
  <button
    aria-label="List A"
    aria-pressed="false"
    class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-firstButton css-1x4vipr-MuiButtonBase-root-MuiToggleButton-root"
    data-mui-internal-clone-element="true"
    tabindex="0"
    type="button"
    value="A"
  >
    <span
      tabindex="-1"
    >
      <div
        class="css-1ft6wgl"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-8icru1-MuiSvgIcon-root"
          data-file-name="IconListSmall"
          data-testid="IconListSmall"
          fillcontrast="white"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        />
      </div>
    </span>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
  <button
    aria-label="List B"
    aria-pressed="false"
    class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-middleButton css-1x4vipr-MuiButtonBase-root-MuiToggleButton-root"
    data-mui-internal-clone-element="true"
    tabindex="0"
    type="button"
    value="B"
  >
    <span
      tabindex="-1"
    >
      <div
        class="css-1ft6wgl"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-8icru1-MuiSvgIcon-root"
          data-file-name="IconListSmall"
          data-testid="IconListSmall"
          fillcontrast="white"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        />
      </div>
    </span>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
  <button
    aria-label="List C"
    aria-pressed="true"
    class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root Mui-selected MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-middleButton css-1x4vipr-MuiButtonBase-root-MuiToggleButton-root"
    data-mui-internal-clone-element="true"
    tabindex="0"
    type="button"
    value="C"
  >
    <span
      tabindex="-1"
    >
      <div
        class="css-1ft6wgl"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-8icru1-MuiSvgIcon-root"
          data-file-name="IconListSmall"
          data-testid="IconListSmall"
          fillcontrast="white"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        />
      </div>
    </span>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
  <button
    aria-label="List D"
    aria-pressed="false"
    class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-lastButton css-1x4vipr-MuiButtonBase-root-MuiToggleButton-root"
    data-mui-internal-clone-element="true"
    tabindex="0"
    type="button"
    value="D"
  >
    <span
      tabindex="-1"
    >
      <div
        class="css-1ft6wgl"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-8icru1-MuiSvgIcon-root"
          data-file-name="IconListSmall"
          data-testid="IconListSmall"
          fillcontrast="white"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        />
      </div>
    </span>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`<SegmentedControl /> Default story renders snapshot 1`] = `
<div
  aria-label="Segmented Control"
  class="MuiToggleButtonGroup-root css-5qbclc-MuiToggleButtonGroup-root"
  role="group"
>
  <button
    aria-label="List A"
    aria-pressed="true"
    class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root Mui-selected MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-firstButton css-1x4vipr-MuiButtonBase-root-MuiToggleButton-root"
    data-mui-internal-clone-element="true"
    tabindex="0"
    type="button"
    value="A"
  >
    <span
      tabindex="-1"
    >
      <div
        class="css-1ft6wgl"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-8icru1-MuiSvgIcon-root"
          data-file-name="IconListSmall"
          data-testid="IconListSmall"
          fillcontrast="white"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        />
      </div>
    </span>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
  <button
    aria-label="List B"
    aria-pressed="false"
    class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-middleButton css-1x4vipr-MuiButtonBase-root-MuiToggleButton-root"
    data-mui-internal-clone-element="true"
    tabindex="0"
    type="button"
    value="B"
  >
    <span
      tabindex="-1"
    >
      <div
        class="css-1ft6wgl"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-8icru1-MuiSvgIcon-root"
          data-file-name="IconListSmall"
          data-testid="IconListSmall"
          fillcontrast="white"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        />
      </div>
    </span>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
  <button
    aria-label="List C"
    aria-pressed="false"
    class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-middleButton css-1x4vipr-MuiButtonBase-root-MuiToggleButton-root"
    data-mui-internal-clone-element="true"
    tabindex="0"
    type="button"
    value="C"
  >
    <span
      tabindex="-1"
    >
      <div
        class="css-1ft6wgl"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-8icru1-MuiSvgIcon-root"
          data-file-name="IconListSmall"
          data-testid="IconListSmall"
          fillcontrast="white"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        />
      </div>
    </span>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
  <button
    aria-label="List D"
    aria-pressed="false"
    class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-lastButton css-1x4vipr-MuiButtonBase-root-MuiToggleButton-root"
    data-mui-internal-clone-element="true"
    tabindex="0"
    type="button"
    value="D"
  >
    <span
      tabindex="-1"
    >
      <div
        class="css-1ft6wgl"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-8icru1-MuiSvgIcon-root"
          data-file-name="IconListSmall"
          data-testid="IconListSmall"
          fillcontrast="white"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        />
      </div>
    </span>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`<SegmentedControl /> WithDisabledButton story renders snapshot 1`] = `
<div
  aria-label="Segmented Control"
  class="MuiToggleButtonGroup-root css-5qbclc-MuiToggleButtonGroup-root"
  role="group"
>
  <button
    aria-label="List A"
    aria-pressed="true"
    class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root Mui-selected MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-firstButton css-1x4vipr-MuiButtonBase-root-MuiToggleButton-root"
    data-mui-internal-clone-element="true"
    tabindex="0"
    type="button"
    value="A"
  >
    <span
      tabindex="-1"
    >
      <div
        class="css-1ft6wgl"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-8icru1-MuiSvgIcon-root"
          data-file-name="IconLinesHorizontal3Small"
          data-testid="IconLinesHorizontal3Small"
          fillcontrast="white"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        />
      </div>
    </span>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
  <button
    aria-label="List B"
    aria-pressed="false"
    class="MuiButtonBase-root Mui-disabled MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root Mui-disabled MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButtonGroup-middleButton css-1x4vipr-MuiButtonBase-root-MuiToggleButton-root"
    disabled=""
    tabindex="-1"
    type="button"
    value="B"
  >
    <span
      tabindex="-1"
    >
      <div
        class="css-1ft6wgl"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-8icru1-MuiSvgIcon-root"
          data-file-name="IconLinesHorizontal3Small"
          data-testid="IconLinesHorizontal3Small"
          fillcontrast="white"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        />
      </div>
    </span>
  </button>
  <button
    aria-label="List C"
    aria-pressed="false"
    class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-middleButton css-1x4vipr-MuiButtonBase-root-MuiToggleButton-root"
    data-mui-internal-clone-element="true"
    tabindex="0"
    type="button"
    value="C"
  >
    <span
      tabindex="-1"
    >
      <div
        class="css-1ft6wgl"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-8icru1-MuiSvgIcon-root"
          data-file-name="IconLinesHorizontal3Small"
          data-testid="IconLinesHorizontal3Small"
          fillcontrast="white"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        />
      </div>
    </span>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
  <button
    aria-label="List D"
    aria-pressed="false"
    class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-lastButton css-1x4vipr-MuiButtonBase-root-MuiToggleButton-root"
    data-mui-internal-clone-element="true"
    tabindex="0"
    type="button"
    value="D"
  >
    <span
      tabindex="-1"
    >
      <div
        class="css-1ft6wgl"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-8icru1-MuiSvgIcon-root"
          data-file-name="IconLinesHorizontal3Small"
          data-testid="IconLinesHorizontal3Small"
          fillcontrast="white"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        />
      </div>
    </span>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
</div>
`;
